--- a/Tailwind/output.css
+++ b/Tailwind/output.css
@@ -556,12 +556,16 @@ video {
   }
 }
 
-.right-0 {
-  right: 0px;
+.sticky {
+  position: sticky;
 }
 
-.float-left {
-  float: left;
+.top-0 {
+  top: 0px;
+}
+
+.m-4 {
+  margin: 1rem;
 }
 
 .mx-4 {
@@ -577,84 +581,16 @@ video {
   display: flex;
 }
 
-.h-48 {
-  height: 12rem;
-}
-
-.h-9 {
-  height: 2.25rem;
-}
-
-.h-32 {
-  height: 8rem;
-}
-
-.h-60 {
-  height: 15rem;
-}
-
-.h-72 {
-  height: 18rem;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
-.h-8 {
-  height: 2rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
-.h-12 {
-  height: 3rem;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.w-48 {
-  width: 12rem;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
-.w-9 {
-  width: 2.25rem;
-}
-
-.w-32 {
-  width: 8rem;
-}
-
-.w-60 {
-  width: 15rem;
-}
-
-.w-72 {
-  width: 18rem;
+.h-\[500px\] {
+  height: 500px;
 }
 
 .w-96 {
   width: 24rem;
 }
 
-.border-separate {
-  border-collapse: separate;
-}
-
-.items-center {
-  align-items: center;
+.w-\[400px\] {
+  width: 400px;
 }
 
 .justify-between {
@@ -677,17 +613,12 @@ video {
   border-width: 2px;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
 .border-b {
   border-bottom-width: 1px;
 }
 
-.border-gray-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 
 .border-black {
@@ -695,14 +626,14 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
+.border-gray-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+
 .border-second {
   --tw-border-opacity: 1;
   border-color: rgb(212 250 252 / var(--tw-border-opacity));
-}
-
-.border-b-second {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(212 250 252 / var(--tw-border-opacity));
 }
 
 .bg-Back {
@@ -710,23 +641,19 @@ video {
   background-color: rgb(247 225 174 / var(--tw-bg-opacity));
 }
 
-.bg-prime {
-  --tw-bg-opacity: 1;
-  background-color: rgb(97 122 85 / var(--tw-bg-opacity));
-}
-
-.bg-transparent {
-  background-color: transparent;
-}
-
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-white {
+.bg-prime {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(97 122 85 / var(--tw-bg-opacity));
+}
+
+.bg-second {
+  --tw-bg-opacity: 1;
+  background-color: rgb(212 250 252 / var(--tw-bg-opacity));
 }
 
 .bg-no-repeat {
@@ -737,6 +664,10 @@ video {
   padding: 2.5rem;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .p-4 {
   padding: 1rem;
 }
@@ -745,60 +676,20 @@ video {
   padding: 11rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
+.p-7 {
+  padding: 1.75rem;
 }
 
-.p-32 {
-  padding: 8rem;
+.p-6 {
+  padding: 1.5rem;
 }
 
-.px-32 {
-  padding-left: 8rem;
-  padding-right: 8rem;
-}
-
-.px-52 {
-  padding-left: 13rem;
-  padding-right: 13rem;
-}
-
-.px-96 {
-  padding-left: 24rem;
-  padding-right: 24rem;
-}
-
-.px-\[1000px\] {
-  padding-left: 1000px;
-  padding-right: 1000px;
-}
-
-.px-\[720px\] {
-  padding-left: 720px;
-  padding-right: 720px;
-}
-
-.px-\[400px\] {
-  padding-left: 400px;
-  padding-right: 400px;
-}
-
-.px-\[500px\] {
-  padding-left: 500px;
-  padding-right: 500px;
-}
-
-.px-\[600px\] {
-  padding-left: 600px;
-  padding-right: 600px;
+.p-5 {
+  padding: 1.25rem;
 }
 
 .text-left {
   text-align: left;
-}
-
-.text-center {
-  text-align: center;
 }
 
 .text-2xl {
@@ -830,8 +721,9 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:border-b-2:hover {
-  border-bottom-width: 2px;
+.text-violet-700 {
+  --tw-text-opacity: 1;
+  color: rgb(109 40 217 / var(--tw-text-opacity));
 }
 
 .hover\:border-b:hover {
