--- a/View/Draken.html
+++ b/View/Draken.html
@@ -6,7 +6,7 @@
   <link href="/Tailwind/output.css" rel="stylesheet">
   <title></title>
 </head>
-<body class="bg-Back">
+<body class="bg-Back overflow-x-hidden">
     <nav class="flex text-second top-0 sticky container  font-bold p-10 bg-prime border-b-2 border-gray-700 justify-between">
         <h1 class="text-3xl md:text-2xl text-black bg-gradient-to-r from-GRD to-prime ">Draken</h1>
         <div class="hidden md:flex">
@@ -25,16 +25,16 @@
         </div>
     </nav>
     <section id="Home">
-        <div class="absolute w-[70px] h-[70px] md:w-full md:h-full bg-right bg-no-repeat -z-10 " style="background-image: url(./img/R3.png);"></div>
+        <div class="absolute px-[575px]  bottom-0 w-[100px] h-[400px] md:w-full md:h-full bg-right bg-no-repeat -z-10 " style="background-image: url(./img/R3.png);"></div>
         <div class="p-1 py-7 md:p-44 mb-12 container text-black  font-bold  ">
             <h1 class="text-4xl mx-4" >Apakah Anda Tahu <span class="text-second" style="-webkit-text-fill-color: #D4FAFC;-webkit-text-stroke-width: 1px;-webkit-text-stroke-color: black;">Reptile?</span></h1>
-            <p class="p-4 w-[400px] font-bold text-xl md:text-base  md:w-[500px]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet illo  ut aliquid blanditiis ipsum  temporibus minima similique ab animi distinctio. Lorem ipsum dolor sit amet consectetur  adipisicing elit. Similique, quisquam!</p> 
+            <p class="p-4 w-[400px] font-bold text-xl md:text-base  md:w-[500px]">kelompok hewan yang termasuk dalam kelas Reptilia. Mereka merupakan hewan berdarah dingin (poikilotermik) yang memiliki kulit bersisik, bernapas dengan paru-paru, dan umumnya bertelur. Reptil termasuk dalam kelompok hewan vertebrata atau bertulang belakang.</p> 
             <div class="p-4">
                 <a class="p-2 bg-black text-second border-2 border-black rounded z-50" href="#penjelasan"><span class=" border-b border-second">Mulai</span></a>
             </div>
         </div>
     </section>
-    <section id="penjelasan">
+    <section class="z-10" id="penjelasan">
         <div class="md:p-44 px-5 border border-black container bg-prime">
             <h1 class="text-left text-5xl md:text-4xl mt-10 text-second font-bold mb-12 md:mt-0" style="-webkit-text-fill-color: #D4FAFC;-webkit-text-stroke-width: 1px;-webkit-text-stroke-color: black;">Penjelasan:</h1>
             <p class="text-white font-bold text-xl md:w-[600px] md:text-base mb-10 md:mb-0">Reptil adalah kelompok hewan vertebrata berdarah dingin dan memiliki sisik yang menutupi tubuhnya. Reptilia adalah tetrapoda dan menelurkan telur yang embrionya diselubungi oleh membran amniotik. Sekarang ini mereka menghidupi setiap benua kecuali Antarktika</p>
